alignment fixes

--- a/angular-app/src/app/searchresult/searchresult.component.scss
+++ b/angular-app/src/app/searchresult/searchresult.component.scss
@@ -551,7 +551,7 @@ $search-footer-height: 60px;
 
 .row12{
   margin-left: 0%;
-  width: 65%;
+  width: 45%;
 }
 
 col-sm-3 col-md-3{
